[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/godot-git-control.funabab/scripts/controls/git_control/git_control.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-git-control.funabab/scripts/controls/git_control/toolbar.gd" type="Script" id=2]
[ext_resource path="res://addons/godot-git-control.funabab/fonts/iconsFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/godot-git-control.funabab/scripts/controls/git_control/branch_btn.gd" type="Script" id=4]
[ext_resource path="res://addons/godot-git-control.funabab/fonts/workspaceFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://addons/godot-git-control.funabab/scripts/controls/git_control/workspace_tree.gd" type="Script" id=6]
[ext_resource path="res://addons/godot-git-control.funabab/scripts/controls/git_control/console_output.gd" type="Script" id=7]
[ext_resource path="res://addons/godot-git-control.funabab/scripts/controls/git_control/console_git_panel.gd" type="Script" id=8]

[node name="git_control" type="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 380.0
margin_bottom = 274.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
script = ExtResource( 1 )

[node name="toolbar" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1404.0
margin_bottom = 40.0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
script = ExtResource( 2 )
_sections_unfolded = [ "Grow Direction", "Material", "Pause", "Rect", "Size Flags", "Visibility" ]

[node name="refresh_btn" type="Button" parent="toolbar" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 44.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ""
flat = false
align = 1
_sections_unfolded = [ "Grow Direction", "Size Flags", "custom_fonts" ]

[node name="VSeparator2" type="VSeparator" parent="toolbar" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_right = 52.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="GridContainer" type="GridContainer" parent="toolbar" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 56.0
margin_right = 956.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 1
columns = 2
_sections_unfolded = [ "Size Flags" ]

[node name="branch_btn" type="OptionButton" parent="toolbar/GridContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 852.0
margin_bottom = 40.0
rect_min_size = Vector2( 102, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "Branches"
flat = false
align = 0
selected = 0
items = [ "Branches", null, false, -1, null ]
script = ExtResource( 4 )
_sections_unfolded = [ "Size Flags" ]

[node name="delete_branch_btn" type="MenuButton" parent="toolbar/GridContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 856.0
margin_right = 900.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = ""
flat = false
align = 1
items = [  ]
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="VSeparator" type="VSeparator" parent="toolbar" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 960.0
margin_right = 964.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Size Flags" ]

[node name="toolbar_action_btns" type="GridContainer" parent="toolbar" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 968.0
margin_right = 1404.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 12
_sections_unfolded = [ "Size Flags" ]

[node name="commit_btn" type="Button" parent="toolbar/toolbar_action_btns" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 44.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
hint_tooltip = "Commit"
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ""
flat = false
align = 1
_sections_unfolded = [ "Hint", "Size Flags", "custom_colors", "custom_constants" ]

[node name="revert_btn" type="Button" parent="toolbar/toolbar_action_btns" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_right = 92.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
hint_tooltip = "Revert"
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ""
flat = false
align = 1
_sections_unfolded = [ "Hint", "Size Flags", "custom_fonts" ]

[node name="tag_btn" type="Button" parent="toolbar/toolbar_action_btns" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 96.0
margin_right = 140.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
hint_tooltip = "Tag"
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ""
flat = false
align = 1
_sections_unfolded = [ "Hint", "Size Flags", "custom_fonts" ]

[node name="fetch_btn" type="Button" parent="toolbar/toolbar_action_btns" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 144.0
margin_right = 188.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
hint_tooltip = "Fetch"
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ""
flat = false
align = 1
_sections_unfolded = [ "Hint", "Size Flags", "custom_fonts" ]

[node name="pull_btn" type="Button" parent="toolbar/toolbar_action_btns" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 192.0
margin_right = 236.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
hint_tooltip = "Pull"
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ""
flat = false
align = 1
_sections_unfolded = [ "Hint", "Size Flags", "custom_fonts" ]

[node name="rebase_btn" type="Button" parent="toolbar/toolbar_action_btns" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_right = 284.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
hint_tooltip = "Rebase"
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ""
flat = false
align = 1
_sections_unfolded = [ "Hint", "Size Flags", "custom_fonts" ]

[node name="merge_btn" type="Button" parent="toolbar/toolbar_action_btns" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 288.0
margin_right = 332.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
hint_tooltip = "Merge"
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ""
flat = false
align = 1
_sections_unfolded = [ "Hint", "Size Flags", "custom_fonts" ]

[node name="branch_btn" type="Button" parent="toolbar/toolbar_action_btns" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 336.0
margin_right = 380.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
hint_tooltip = "Branch"
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ""
flat = false
align = 1
_sections_unfolded = [ "Hint", "Size Flags", "custom_fonts" ]

[node name="log_btn" type="Button" parent="toolbar/toolbar_action_btns" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 384.0
margin_right = 428.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
hint_tooltip = "Log"
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ""
flat = false
align = 1
_sections_unfolded = [ "Hint", "Size Flags", "custom_fonts" ]

[node name="seperator" type="VSeparator" parent="toolbar/toolbar_action_btns" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_right = 436.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 3

[node name="workspace" type="HSplitContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 44.0
margin_right = 1404.0
margin_bottom = 874.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 0
collapsed = false
dragger_visibility = 0
_sections_unfolded = [ "Size Flags" ]

[node name="VBoxContainer" type="VBoxContainer" parent="workspace" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 656.0
margin_bottom = 830.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="workspace_title" type="Label" parent="workspace/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 656.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Workspace"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="workspace_tree" type="Tree" parent="workspace/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 656.0
margin_bottom = 830.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
script = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Size Flags", "custom_fonts", "custom_styles" ]

[node name="main_container" type="VSplitContainer" parent="workspace" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 668.0
margin_right = 1404.0
margin_bottom = 830.0
rect_min_size = Vector2( 150, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
split_offset = 0
collapsed = false
dragger_visibility = 0
_sections_unfolded = [ "Grow Direction", "Margin", "Size Flags" ]

[node name="console_panel" type="VBoxContainer" parent="workspace/main_container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 736.0
margin_bottom = 409.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0

[node name="console_title" type="HBoxContainer" parent="workspace/main_container/console_panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 736.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="title_label" type="Label" parent="workspace/main_container/console_panel/console_title" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 689.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Console:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags" ]

[node name="clear_btn" type="Button" parent="workspace/main_container/console_panel/console_title" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 693.0
margin_right = 736.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "clear"
flat = false
align = 1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="console_output" type="TextEdit" parent="workspace/main_container/console_panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 736.0
margin_bottom = 409.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_colors/current_line_color = Color( 0.172549, 0.164706, 0.196078, 1 )
text = ""
readonly = true
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true
script = ExtResource( 7 )
_sections_unfolded = [ "Size Flags" ]

[node name="console_git_panel" type="VBoxContainer" parent="workspace/main_container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 421.0
margin_right = 736.0
margin_bottom = 830.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0
script = ExtResource( 8 )
_sections_unfolded = [ "Pause", "Size Flags" ]

[node name="console_git_title" type="HBoxContainer" parent="workspace/main_container/console_git_panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 736.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="titile_label" type="Label" parent="workspace/main_container/console_git_panel/console_git_title" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 688.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Git Console:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags" ]

[node name="clear_btn" type="Button" parent="workspace/main_container/console_git_panel/console_git_title" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 692.0
margin_right = 736.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Clear"
flat = false
align = 1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="console_git" type="TextEdit" parent="workspace/main_container/console_git_panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 736.0
margin_bottom = 409.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.690196, 0.690196, 0.690196, 1 )
custom_colors/current_line_color = Color( 0.172549, 0.164706, 0.196078, 1 )
text = ""
readonly = true
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true
_sections_unfolded = [ "Grow Direction", "Margin", "Size Flags" ]


